# tokeman

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
macos/tray/: Package.swift  build.sh
macos/tray/Sources/: TokemanTray.swift
src/: config.rs  display.rs  launch.rs  main.rs  probe.rs  stats.rs  store.rs  terminal.rs  tray.rs  tui.rs
