[package]
name = "tokeman"
version = "0.1.1"
edition = "2024"
description = "Anthropic token usage visualizer"
repository = "https://github.com/emberian/tokeman"

[features]
default = []
tray = [
    "dep:tray-icon",
    "dep:eframe",
]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
futures = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

# System tray (feature-gated)
tray-icon = { version = "0.21", optional = true }
eframe = { version = "0.33", optional = true, features = ["glow"] }


# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
